--- a/js/rijit/navigation/templates/ProductsNavigation.html
+++ b/js/rijit/navigation/templates/ProductsNavigation.html
@@ -1,11 +1,11 @@
 <div>
 <table class="productLayoutTable">
     <tr>
-        <td>
+        <td class="menuColumn">
 <div id="mainMenu" style="width:100%" data-dojo-type="dijit.Menu" data-dojo-attach-point="mainMenu">      
     </div></td>
 <td>
-<div id="contentNode"data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="contentNode" data-dojo-props="region:'center'"></div>
+<div class="rijitContentPane" id="contentNode"data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="contentNode" data-dojo-props="region:'center'"></div>
 </td>
     <tr>
 </div>
