--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,36 @@
-/*   @import url("../js/dijit/themes/claro/claro.css");
-*//*  @import url("../js/dijit/themes/nihilo/nihilo.css");
-*/
-@import url("../js/dijit/themes/soria/soria.css");
-   html, body {
+   @import url("../js/dijit/themes/claro/claro.css");
+/*  @import url("../js/dijit/themes/nihilo/nihilo.css");
+
+/*@import url("../js/dijit/themes/soria/soria.css");
+*/   html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     font-family: "Segoe UI Web Light","Segoe UI Light","Segoe UI Web Regular","Segoe UI","Segoe UI Symbol","Helvetica Neue",Arial;
-
-    font-size:85%;
+letter-spacing:2px;
+word-spacing:2px;
+    font-size:95%;
 }
 
-.rijitProductNavigation 
+.rijitNavigation 
 {
 	height:100%;
 }
-.rijitProductNavigation .productLayoutTable{
+.rijitNavigation .productLayoutTable{
 	width:100%;
 	height:100%;
 	border-spacing: 0px;
 }
-.rijitProductNavigation .productLayoutTable th,tr,td{
+.rijitNavigation .productLayoutTable th,tr,td{
 	border: 0px solid black;
 	height:100%;
 	vertical-align: top;
 
 
 }
-.rijitProductNavigation .productLayoutTable .menuColumn
+.rijitNavigation .productLayoutTable .menuColumn
 {
 	width:15%;
-	background-color: #444444;
 
 }
 
@@ -40,7 +40,7 @@
 
 .rijitContentPane{
 	background: none repeat scroll 0 0 #eeeeee;
-	border-top-left-radius: 18px;
+	border-top-left-radius: 0px;
 	height: 100%;
 
 }
@@ -68,4 +68,52 @@
 	color: #4A4A4A;
     border-top: 1px #222222 solid;
 	border-bottom: 1px black solid;
+}
+.rijitController	 {
+	padding-left: 5%;
+}
+.rijitController h3{
+	font-size: 215%;
+}
+.rijitController .form .dijitTextBox{
+    width:50%;
+    font-size:200%;
+    font-weight: lighter;
+
+}
+.form-row-field{
+   display:inline-block;
+    width:100px;
+    margin-bottom:3em;
+}
+.rijitNavigation .dijitMenuItem td{
+	  padding: 1px;
+	height:3em;
+}
+.actionContent{
+	position:absolute;
+}
+.form-row-file{
+	display: inline-block;
+	width:220px;
+	height:180px;
+	float:right;
+	margin-right: 3	%;
+	border:5px dashed gray;
+	color: gray;
+	font-size: 120%;
+	cursor:pointer;
+}
+.form-row-file .title{
+text-align: center;
+padding-top:35%;
+}
+.form-row-file input{
+width:100%;
+height:100%;
+opacity: 0;
+z-index: 2;
+position: absolute;
+top: 30px;
+cursor: pointer;
 }
