--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,16 @@ word-spacing:2px;
 }
 .form-row-file .title{
 text-align: center;
-padding-top:35%;
+margin: auto;
+margin: 0 auto;
+height: 100%;
+}
+.form-row-file .title p{
+	margin:30%;
+}
+.form-row-file .title img{
+	width:100%;
+	height:100%;
 }
 .form-row-file input{
 width:100%;
@@ -117,3 +126,4 @@ position: absolute;
 top: 30px;
 cursor: pointer;
 }
+
