layout working with tree

--- a/js/rijit/navigation/templates/NavPlugin.html
+++ b/js/rijit/navigation/templates/NavPlugin.html
@@ -1,13 +1,12 @@
 <div>
-	<div style="height:100%" data-dojo-type="dijit.layout.BorderContainer" data-dojo-props="design:'sidebar', gutters:true, liveSplitters:true">
-		<div class="navigation" data-dojo-type="dijit.layout.ContentPane"
+	<div style= "height:100%" data-dojo-type="dijit.layout.BorderContainer" data-dojo-props="design:'sidebar', gutters:true, liveSplitters:true">
+		<div style= "height:100%" class="navigation" data-dojo-type="dijit.layout.ContentPane"
 			data-dojo-props="region:'left', splitter:true, title:'Navigation'">
-			<div class="fullsize" data-dojo-attach-point="navigation">navigation ada d
-			 adfa da dad fs dfas</div>
+			<div style= "height:100%;min-width: 200px" class="fullsize" data-dojo-attach-point="navigation"></div>
 		</div>
-		<div data-dojo-type="dijit.layout.ContentPane"
+		<div style= "height:100%" data-dojo-type="rijit.navigation.NavPluginContent"
 			data-dojo-props="region:'center'">
-			<div data-dojo-attach-point="navigationContentNode">navigation content adad ad a dadf ad a dfadf
+			<div style= "height:100%" data-dojo-attach-point="navigationContentNode">navigation content adad ad a dadf ad a dfadf
 			 adadf a fda</div>
 		</div>
 	</div>
