UI and dojo build working

--- a/js/rijit/navigation/templates/NavPlugin.html
+++ b/js/rijit/navigation/templates/NavPlugin.html
@@ -6,8 +6,7 @@
 		</div>
 		<div style= "height:100%" data-dojo-type="rijit.navigation.NavPluginContent"
 			data-dojo-props="region:'center'">
-			<div style= "height:100%" data-dojo-attach-point="navigationContentNode">navigation content adad ad a dadf ad a dfadf
-			 adadf a fda</div>
+			<div style= "height:100%" data-dojo-attach-point="navigationContentNode"></div>
 		</div>
 	</div>
 </div>
