--- a/js/rijit/themes/style.css
+++ b/js/rijit/themes/style.css
@@ -8,3 +8,15 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+.autogenTable-labelCell {
+
+  background-color: lightgrey;
+  padding-left: 5px;
+}
+
+.autogenTable-valueCell {
+
+  padding-left: 20px;
+  background-color: lightblue;
+}
